# oneshallpass-haskell

./: ChangeLog.md  README.md  oneshallpass.cabal
lib/Crypto/: Oneshallpass.hs
