name:                oneshallpass
version:             0.1.0.0
synopsis:            Oneshallpass.com implementation
-- description:         
homepage:            https://github.com/fgaz/oneshallpass-haskell
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
-- copyright:           
category:            Cryptography
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Crypto.Oneshallpass
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.12
                     , bytestring
                     , base64-bytestring
                     , memory
                     , cryptonite
  hs-source-dirs:      src
  default-language:    Haskell2010

executable oneshallpass
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.12
                     , oneshallpass
  hs-source-dirs:      src
  default-language:    Haskell2010
